<resources>
    <string name="app_name">Movie Database</string>
    <string name="unlock_all_that_mdb_has_to_offer">Unlock all that MDb has to offer</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an account</string>
    <string name="or">or</string>
    <string name="later">Later</string>
    <string name="exit">Exit</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="refresh">refresh</string>
    <string name="home">Home</string>
    <string name="favorites_movies">Favorites Movies</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="account">Account</string>
    <string name="search_movies">Search movies</string>
    <string name="actors">Top Cast</string>
    <string name="biography">Biography</string>
    <string name="gallery">Gallery</string>

    <string name="you_haven_t_added_any_movie_to_your_favorite_movies_list">You haven\'t added any movie to your favorite movies list</string>
    <string name="no_available_images">No available images</string>
    <string name="details_for_this_movie_are_currently_not_available">Details for this movie are currently not available</string>
</resources>
