<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        tools:context=".views.ui.fragments.EnterAppFragment">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/unlock_all_that_mdb_has_to_offer"
            android:textAlignment="center"
            android:textColor="@color/primaryText"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="70dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/login"
            android:backgroundTint="@color/button"
            android:textColor="@color/blackText"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/create_an_account"
            android:backgroundTint="@color/button"
            android:textColor="@color/blackText"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/secondaryText"
            android:textAlignment="center"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnNotNow"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/later"
            android:backgroundTint="@color/button"
            android:textColor="@color/blackText"/>
    </LinearLayout>
</FrameLayout>
