<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.NoInternetFragment"
    android:background="@color/background">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnExit"
        android:layout_width="224dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:text="@string/exit"
        android:backgroundTint="@color/button"
        android:textColor="@color/blackText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRefresh" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRefresh"
        android:layout_width="224dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/refresh"
        android:backgroundTint="@color/button"
        android:textColor="@color/blackText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="278dp"
        android:layout_height="90dp"
        android:layout_marginTop="100dp"
        android:textColor="@color/primaryText"
        android:text="@string/no_internet_connection"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>